<resources>
    <string name="app_name">LAPSFieldTool_V2</string>
    <string name="main_label">Device Selection</string>
    <string name="title_activity_login">Please Login to Entra ID App</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Client Secret</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid client (or app) ID</string>
    <string name="invalid_password">Client secret must be >5 characters</string>
    <string name="invalid_tenantid">Not a valid tenant ID</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompttenantid">"Tenant ID"</string>
    <string name="promptclientid">"Client (or App) ID"</string>
    <string name="search_hint">Search</string>

    <string-array name="dropdown_options">
        <item>ServerAd (Hybrid)</item>
        <item>AzureAd (Cloud-Only)</item>
        <item>Workplace</item>
    </string-array>
    <string name="title_activity_computer">ComputerActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="loading_device_credentials">Loading device credentials...</string>
    <string name="back">Back</string>
    <string name="account_administrator">Account: Administrator</string>
    <string name="sid_resource">SID: S-1-5-21-...</string>
    <string name="backup_date">Backup Date: 2025-02-20</string>
    <string name="base64_password">Base64 Password: AAAAA==</string>
    <string name="password_decodedpassword">Password: DecodedPassword</string>
</resources>